--- a/page1.html
+++ b/page1.html
@@ -29,7 +29,7 @@
 
     
 
-    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top navbar-toggleable-sm bg-color transparent">
+    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-toggleable-sm bg-color transparent">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <div class="hamburger">
                 <span></span>
@@ -54,7 +54,7 @@
                         <span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         Perfil</a>
                 </li><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="page2.html" aria-expanded="false"><span class="mbri-italic mbr-iconfont mbr-iconfont-btn"></span>
+                    <a class="nav-link link text-white display-4" href="page2.html" aria-expanded="false"><span class="mbri-question mbr-iconfont mbr-iconfont-btn"></span>
                         
                         Quemaduras</a>
                 </li><li class="nav-item"><a class="nav-link link text-white display-4" href="page3.html" aria-expanded="false"><span class="mbri-map-pin mbr-iconfont mbr-iconfont-btn"></span>
@@ -68,7 +68,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><script src="assets/popper/popper.min.js"></script>
+  <section class="engine"><a href="https://mobirise.info/q">free responsive web templates</a></section><script src="assets/popper/popper.min.js"></script>
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
