--- a/page3.html
+++ b/page3.html
@@ -71,7 +71,7 @@
 
      
 
-    <div class="google-map"><iframe src="https://www.google.com/maps/d/embed?mid=1R-PrUGiNFsWqi3apoP6AAg8vGb4hXrL5&hl=es-419" margin-top="100" width="0" height="20"></iframe>
+    <div class="google-map"><iframe src="https://www.google.com/maps/d/embed?mid=1R-PrUGiNFsWqi3apoP6AAg8vGb4hXrL5&hl=es-419" frameborder="0" style="border:0></iframe>
   </section>
 
 
