--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="page1.html">
+                    <a class="nav-link link text-white display-4" href="Perfil.html">
                         <span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         Perfil</a>
                 </li><li class="nav-item">
