--- a/page9.html
+++ b/page9.html
@@ -81,5 +81,38 @@
   
   
   <input name="animation" type="hidden">
+  
+  <form action="/action_page.php">
+        
+    <h2>Cuestionario sobre el accidente</h2>    
+        
+  <p>¿Con que objeto se quemó?</p>
+  <input type="checkbox" name="gender" value="male"> Con superfies calientes<br>
+  <input type="checkbox" name="gender" value="female"> Con fuego<br>
+  <input type="checkbox" name="gender" value="other"> Con sustancias químicas<br> 
+  <input type="checkbox" name="gender" value="other"> Con una corriente eléctrica<br> 
+  
+
+<p>¿Qué parte del cuerpo se quemó?</p>
+  <input type="checkbox" name="age" value="30"> Piernas<br>
+  <input type="checkbox" name="age" value="60"> Brazos<br>
+  <input type="checkbox" name="age" value="100"> Torso<br>  
+  <input type="checkbox" name="gender" value="other"> Cabeza<br>
+
+  
+  
+<p>¿Qué acciones realizó luego del accidente?</p>
+  <input type="checkbox" name="age" value="30"> Hechar abundante agua a la superficie quemada<br>
+  <input type="checkbox" name="age" value="60"> Cubrir con un vendaje la superficie quemada<br>
+  <input type="checkbox" name="age" value="100"> Untar la superficie quemada con un crema<br>  
+  <input type="checkbox" name="gender" value="other"> Colocar hielo sobre la superficie quemada<br>
+
+  <input type="submit" value="Enviar" id="boton3">   
+</form>
+  
+  
+  
+  
+  
   </body>
 </html>
