--- a/page9.html
+++ b/page9.html
@@ -81,7 +81,7 @@
   <script src="assets/theme/js/script.js"></script>
   
   
-  <input name="animation" type="hidden">
+  <input name="animation" type="hidden" id="formulario">
   
   <form action="/action_page.php">
         
