--- a/page9.html
+++ b/page9.html
@@ -73,7 +73,9 @@
   <input type="checkbox" name="age" value="100"> Sudor e irritación<br>  
   <input type="checkbox" name="gender" value="other"> Inflamación<br>
   <input type="checkbox" name="gender" value="other"> Picazón<br> 
-   <input type="checkbox" name="gender" value="other"> No presenta dolor<br> 
+   <input type="checkbox" name="gender" value="other"> Dificultad para respirar<br>
+    <input type="checkbox" name="gender" value="other"> No presenta dolor<br> 
+    
     
  <p>¿De que color luce la región afectada por la quemadura?</p>
   <input type="checkbox" name="age" value="30"> Rojo<br>
