--- a/page10.html
+++ b/page10.html
@@ -91,6 +91,8 @@
   <input type="checkbox" name="gender" value="other"> De 3-4 horas<br>
   <input type="checkbox" name="gender" value="other"> De 4-5 horas<br> 
   <input type="checkbox" name="gender" value="other"> Más 5 horas<br>
+    
+    <input type="submit" value="Enviar" id="boton3"> 
   
   </body>
 </html>
