--- a/page3.html
+++ b/page3.html
@@ -71,7 +71,7 @@
 
      
 
-    <div class="google-map"><iframe frameborder="0" style="border:0" src="https://goo.gl/maps/i4A5cAAcSCkZJQSm6"></iframe></div>
+    <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/d/u/2/embed?mid=1R-PrUGiNFsWqi3apoP6AAg8vGb4hXrL5"></iframe></div>
 </section>
 
 
