--- a/page9.html
+++ b/page9.html
@@ -88,7 +88,7 @@
   
   <form action="/action_page.php">
         
-    <h2>Cuestionario sobre el accidente</h2>    
+    <h2 id="h234">Cuestionario sobre el accidente</h2>    
         
   <p>¿Con que objeto se quemó?</p>
   <input type="checkbox" name="gender" value="male"> Con superfies calientes<br>
