--- a/page3.html
+++ b/page3.html
@@ -25,6 +25,8 @@
   
 </head>
 <body>
+  
+  <header id="main-header">
   <section class="menu cid-qTkzRZLJNu" once="menu" id="menu1-5">
 
     
@@ -66,6 +68,8 @@
         </div>
     </nav>
 </section>
+    
+</header>    
 
 <section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="map1 cid-rGDThIloTm" id="mapa555">
 
