--- a/page1.html
+++ b/page1.html
@@ -25,6 +25,8 @@
   
 </head>
 <body>
+  
+   <header id="main-header">
   <section class="menu cid-qTkzRZLJNu" once="menu" id="menu1-3">
 
     
@@ -66,6 +68,9 @@
         </div>
     </nav>
 </section>
+     
+     </header>    
+
 
 
   <section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><script src="assets/popper/popper.min.js"></script>
