--- a/page1.html
+++ b/page1.html
@@ -100,10 +100,10 @@
                                     <input type="text" name="name" placeholder="Nombre" data-form-field="Name" required="required" class="form-control px-3 display-7" id="name-header15-v">
                                 </div>
                                 <div class="col-md-12 form-group " data-for="email">
-                                    <input type="email" name="email" placeholder="Correo electrónico" data-form-field="Email" required="required" class="form-control px-3 display-7" id="email-header15-v">
+                                    <input type="email" name="email" placeholder="Direccion" data-form-field="Email" required="required" class="form-control px-3 display-7" id="email-header15-v">
                                 </div>
                                 <div data-for="phone" class="col-md-12 form-group ">
-                                    <input type="tel" name="phone" placeholder="Número de celular" data-form-field="Phone" class="form-control px-3 display-7" id="phone-header15-v">
+                                    <input type="tel" name="phone" placeholder="Fecha de Nacimiento" data-form-field="Phone" class="form-control px-3 display-7" id="phone-header15-v">
                                 </div>
                                 <div data-for="message" class="col-md-12 form-group ">
                                     <textarea name="message" placeholder="Duda" data-form-field="Message" class="form-control px-3 display-7" id="message-header15-v"></textarea>
