--- a/page1.html
+++ b/page1.html
@@ -89,7 +89,7 @@
   
   
   
-  <form action="https://mobirise.com/" id="aeamano" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Hn5NPKwgTDRFJNQifw+QWuhHkrM0bme0iyt5olh0MzLvgXCc7/5gD2fYuuL9kXREhpwiXeMTbaAvPLhxX4SnA0sH47M0cja7JBagtJS1z5NnAJDUCGn1sxgCpW/p7zeY">
+  <form action="recibir.php" id="aeamano" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Hn5NPKwgTDRFJNQifw+QWuhHkrM0bme0iyt5olh0MzLvgXCc7/5gD2fYuuL9kXREhpwiXeMTbaAvPLhxX4SnA0sH47M0cja7JBagtJS1z5NnAJDUCGn1sxgCpW/p7zeY">
                             <div class="row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">¡Te responderé lo más pronto posible!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -99,15 +99,13 @@
                                 <div class="col-md-12 form-group " data-for="name">
                                     <input type="text" name="name" placeholder="Nombre" data-form-field="Name" required="required" class="form-control px-3 display-7" id="name-header15-v">
                                 </div>
-                                <div class="col-md-12 form-group " data-for="email">
-                                    <input type="email" name="email" placeholder="Direccion" data-form-field="Email" required="required" class="form-control px-3 display-7" id="email-header15-v">
+                                <div class="col-md-12 form-group " data-for="apellido">
+                                    <input type="text" name="apellido" placeholder="apellido" data-form-field="Email" required="required" class="form-control px-3 display-7" id="email-header15-v">
                                 </div>
                                 <div data-for="phone" class="col-md-12 form-group ">
-                                    <input type="tel" name="phone" placeholder="Fecha de Nacimiento" data-form-field="Phone" class="form-control px-3 display-7" id="phone-header15-v">
+                                    <input type="tel" name="email" placeholder="Fecha de Nacimiento" data-form-field="Phone" class="form-control px-3 display-7" id="phone-header15-v">
                                 </div>
-                                <div data-for="message" class="col-md-12 form-group ">
-                                    <textarea name="message" placeholder="Duda" data-form-field="Message" class="form-control px-3 display-7" id="message-header15-v"></textarea>
-                                </div>
+                                
                                 <div class="col-md-12 input-group-btn"><button type="submit" class="btn btn-form btn-white display-4">ENVIAR</button></div>
                             </div>
                         </form>
