--- a/Encuesta.html
+++ b/Encuesta.html
@@ -93,7 +93,7 @@
         
    <h2 id="h234">Cuestionario sobre el accidente</h2>    
         
-  <p class="caja" font-family: "Times New Roman", Times, serif>¿Con que objeto se quemó?</p>
+  <p class="caja" >¿Con que objeto se quemó?</p>
   <input type="checkbox" name="a1" value="Con superfies calientes"> Con superfies calientes<br>
   <input type="checkbox" name="a2" value="Con fuego"> Con fuego<br>
   <input type="checkbox" name="a3" value="Con sustancias químicas"> Con sustancias químicas<br> 
