--- a/page9.html
+++ b/page9.html
@@ -93,8 +93,8 @@
         
    <h2 id="h234">Cuestionario sobre el accidente</h2>    
         
-  <p class="caja" >¿Con que objeto se quemó?</p>
-  <input type="checkbox" name="a1" value="Con superfies calientes"> Con superfies calientes<br>
+  <p class="caja" >¿Con qué se quemó?</p>
+  <input type="checkbox" name="a1" value="Con objetos calientes calientes"> Con superfies calientes<br>
   <input type="checkbox" name="a2" value="Con fuego"> Con fuego<br>
   <input type="checkbox" name="a3" value="Con sustancias químicas"> Con sustancias químicas<br> 
   <input type="checkbox" name="a4" value="Con una corriente eléctrica"> Con una corriente eléctrica<br> 
@@ -109,7 +109,7 @@
   
   
 <p class="caja">¿Qué acciones realizó luego del accidente?</p>
-  <input type="checkbox" name="a9" value="Hechar abundante agua a la superficie quemada"> Hechar abundante agua a la superficie quemada<br>
+  <input type="checkbox" name="a9" value="Hechar abundante agua a la superficie quemada"> Echar abundante agua a la superficie quemada<br>
   <input type="checkbox" name="a10" value="Cubrir con un vendaje la superficie quemada"> Cubrir con un vendaje la superficie quemada<br>
   <input type="checkbox" name="a11" value="Untar la superficie quemada con un crema"> Untar la superficie quemada con un crema<br>  
   <input type="checkbox" name="a12" value=" Colocar hielo sobre la superficie quemada"> Colocar hielo sobre la superficie quemada<br>
