--- a/page3.html
+++ b/page3.html
@@ -75,8 +75,8 @@
 
      
 
-    <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/d/u/2/embed?mid=1R-PrUGiNFsWqi3apoP6AAg8vGb4hXrL5"></iframe></div>
-</section>
+    <div class="google-map"><iframe width="100%" height="576" src="https://maphub.net/embed/74175?directions=1&geolocation=1&legend=1" frameborder="0" allow="geolocation"></iframe>
+    </section>  
 
 
   <script src="assets/popper/popper.min.js"></script>
