--- a/page1.html
+++ b/page1.html
@@ -74,7 +74,7 @@
 </section>    
        </header>
        
-    <form action="https://mobirise.com/" method="POST" id="h234" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Hn5NPKwgTDRFJNQifw+QWuhHkrM0bme0iyt5olh0MzLvgXCc7/5gD2fYuuL9kXREhpwiXeMTbaAvPLhxX4SnA0sH47M0cja7JBagtJS1z5NnAJDUCGn1sxgCpW/p7zeY">
+    <form action="xddd.php" method="POST" id="h234" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Hn5NPKwgTDRFJNQifw+QWuhHkrM0bme0iyt5olh0MzLvgXCc7/5gD2fYuuL9kXREhpwiXeMTbaAvPLhxX4SnA0sH47M0cja7JBagtJS1z5NnAJDUCGn1sxgCpW/p7zeY">
                             <div class="row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">¡Te responderé lo más pronto posible!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -102,5 +102,7 @@
     </body>
         
 </html>
+
+
 
 
