--- a/page9.html
+++ b/page9.html
@@ -121,7 +121,7 @@
   <input type="checkbox" name="a16" value="Inflamación"> Inflamación<br>
   <input type="checkbox" name="a17" value="Picazón"> Picazón<br> 
    <input type="checkbox" name="a18" value="Dificultad para respirar"> Dificultad para respirar<br>
-    <input type="checkbox" name="19" value="No presenta dolor"> No presenta dolor<br> 
+    <input type="checkbox" name="a19" value="No presenta dolor"> No presenta dolor<br> 
     
     
  <p class="caja">¿De que color luce la región afectada por la quemadura?</p>
