--- a/page6.html
+++ b/page6.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive website templates</a></section><section class="header1 cid-rHZ2ZPTdjz" id="header16-1q">
+<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="header1 cid-rHZ2ZPTdjz" id="header16-1q">
 
     
 
