--- a/page3.html
+++ b/page3.html
@@ -71,7 +71,7 @@
 
      
 
-    <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3902.2841698985985!2d-77.05868778538162!3d-12.023947091482539!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91059e92c1e829d3%3A0xd040682b45cb97e5!2sUNIVERSIDAD%20PERUANA%20CAYETANO%20HEREDIA%20-%20CAMPUS%20CENTRAL!5e0!3m2!1ses!2spe!4v1572673518449!5m2!1ses!2spe" allowfullscreen=""></iframe></div>
+    <div class="google-map"><iframe width="768" height="576" src="https://maphub.net/embed/74175?directions=1&geolocation=1&legend=1&tablinks=1" frameborder="0" allow="geolocation"></iframe></div>
 </section>
 
 
