--- a/page3.html
+++ b/page3.html
@@ -71,7 +71,7 @@
 
      
 
-    <div class="google-map"><iframe width="100%" height="100%" src="https://maphub.net/embed/74175?directions=1&geolocation=1&legend=1&tablinks=1" frameborder="0" allow="geolocation"></iframe></div>
+    <div class="google-map"><iframe width="768" height="576" src="https://maphub.net/embed/74175?directions=1&geolocation=1&legend=1&tablinks=1" frameborder="0" allow="geolocation"></iframe></div>
 </section>
 
 
